--- a/package.json
+++ b/package.json
@@ -24,5 +24,10 @@
   "devDependencies": {
     "tsc-watch": "^6.2.0",
     "typescript": "^5.6.3"
-  }
+  },
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ]
 }
