--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "ES2023",
-    "module": "nodenext",
+    "target": "es2016",
+    "module": "CommonJS",
     "declaration": true,
     "outDir": "./dist",
     "strict": true,
@@ -10,6 +10,5 @@
     "forceConsistentCasingInFileNames": false
   },
   "include": ["lib/*"],
-  "exclude": ["node_modules", "dist"],
-
+  "exclude": ["node_modules", "dist"]
 }
